2009-03-11  Oliver Hunt  <oliver@apple.com>

        Reviewed by Adele Peterson.

        <rdar://problem/6673852> Widget "Simple World Clock" does not display with Safari 4

        Add testcases to ensure correct behaviour of addStop when given an invalid color
        string.

        * fast/canvas/canvas-gradient-addStop-error-expected.txt: Added.
        * fast/canvas/canvas-gradient-addStop-error.html: Added.
        * fast/canvas/resources/canvas-gradient-addStop-error.js: Added.

2009-03-11  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test for <rdar://problem/3919124> Thai text selection in Safari is
          incorrect

        * platform/mac/editing/selection/word-thai-expected.txt: Added.
        * platform/mac/editing/selection/word-thai.html: Added.

2009-03-11  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dan Bernstein.

        Test for https://bugs.webkit.org/show_bug.cgi?id=14749 percentage 
        top value on position:relative child not calculated correctly if 
        parent has percentage height
        - and corresponding -
        <rdar://problem/6172925>

        * fast/css/percent-top-value-with-relative-position.html: Added.
        * platform/mac/fast/css/percent-top-value-with-relative-position-expected.checksum: Added.
        * platform/mac/fast/css/percent-top-value-with-relative-position-expected.png: Added.
        * platform/mac/fast/css/percent-top-value-with-relative-position-expected.txt: Added.

2009-03-11  Pamela Greene  <pam@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Add test for potential crash in window.frames.length
        These files were accidentally left out of r41459.

        https://bugs.webkit.org/show_bug.cgi?id=24339

        * fast/dom/Window/window-collection-length-no-crash-expected.txt: Added.
        * fast/dom/Window/window-collection-length-no-crash.html: Added.

2009-03-11  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt